tests/reference/asr-arrays_03-de2e952.stderr
semantic error: Type mismatch in annotation-assignment, the types must be compatible
 --> tests/errors/arrays_03.py:6:5
  |
6 |     x: i16[4] = empty([5], dtype=int16)
  |     ^           ^^^^^^^^^^^^^^^^^^^^^^^ type mismatch ('i16[4]' and 'i16[5]')


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
